--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,105 @@
+
+
 <!DOCTYPE html>
-
-<html xmlns:th="http://www.thymeleaf.org">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Good Thymes Virtual Grocery</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" media="all"
-          href="../../css/gtvg.css" th:href="@{/css/gtvg.css}" />
+    <meta charset="ISO-8859-1">
+    <title>Weather App</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="/index.css">
 </head>
-
 <body>
-<p>Hello world</p>
-</body>
+<div class="container">
+    <div class="row align-items-start">
+        <div class="col">
+            <h4 th:text="${location.city} + ', ' + ${location.state} + ' ' + ${location.country}"></h4>
+            <div style="display:inline-block;">
+                <img th:src="${currentWeather.weatherConditionIconURL}" alt="weather icon">
+                <span th:text="${currentWeather.temperature} + '&#8451;'"></span>
+            </div>
+            <p th:text="'&emsp;feel like ' + ${currentWeather.feelLike} + '&#8451;,&emsp;' + ${currentWeather.weatherConditionDescription}"></p>
+            <p th:text="'&emsp;sunrise: ' + ${currentWeather.sunRise} +'&emsp;sunset:' + ${currentWeather.sunSet} +'&emsp;wind: ' + ${currentWeather.windSpeed} +'km/h'"></p>
+            <p th:text="'&emsp;humidity: ' + ${currentWeather.humidity} + '%&emsp;cloudiness: ' + ${currentWeather.cloud} +'%&emsp;uv index: ' + ${currentWeather.uv}"></p>
+        </div>
+        <div class="col">
+            <br>
+            <h3>air quality index</h3>
+            <ul>
+                <li th:text="'CO index: ' + ${airQuality.co}"></li>
+                <li th:text="'NO index: ' + ${airQuality.no}"></li>
+                <li th:text="'NO2 index:' + ${airQuality.no2}"></li>
+                <li th:text="'O3 index: ' + ${airQuality.o3}"></li>
+                <li th:text="'so2 index: ' + ${airQuality.so2}"></li>
+                <li th:text="'Pm 2.5 Index: ' + ${airQuality.pm2_5}"></li>
+                <li th:text="'pm 10 index: ' + ${airQuality.pm10}"></li>
+            </ul>
+        </div>
+    </div>
+    <div class="row align-items-center">
+        <div class="col">
+            <div th:each="weather : ${dailyWeathers}">
+                <button type="button" class="collapsible">
+                    <span style="text-align: left">test</span>
+                    &emsp;&emsp;&emsp;&emsp;
+                    <div style="display:inline-block;">
+                        <img th:src="${weather.weatherConditionIconURL}" alt="weather icon">
+                        <span th:text="${weather.dailyMin} + '&#8451;/' + ${weather.dailyMax} + '&#8451;'"></span>
+                    </div>
+                    &emsp;&emsp;&emsp;&emsp;
+                    <span th:text="${weather.weatherConditionDescription}"></span>
+                </button>
 
+                <div class="content">
+                    <p th:text="'&emsp;the high will be ' + ${weather.dailyMax} + '&#8451;, the low will be ' + ${weather.dailyMax} + '&#8451; ' + ${weather.summary}"></p>
+                    <p th:text="'&emsp;sunrise: ' + ${weather.sunRise} +'&emsp;sunset:' + ${weather.sunSet} +'&emsp;wind: ' + ${weather.windSpeed} +'km/h'"></p>
+                    <p th:text="'&emsp;humidity: ' + ${weather.humidity} + '%&emsp;cloudiness: ' + ${weather.cloud} +'%&emsp;uv index: ' + ${weather.uv}"></p>
+                    <br>
+                    <table>
+                        <tr>
+                            <td></td>
+                            <td>Morning</td>
+                            <td>afternoon</td>
+                            <td>evening</td>
+                            <td>night</td>
+                        </tr>
+                        <tr>
+                            <td>temperature</td>
+                            <td th:text="${weather.morningTemperature} + '&#8451;'"></td>
+                            <td th:text="${weather.afternoonTemperature} + '&#8451;'"></td>
+                            <td th:text="${weather.eveningTemperature} + '&#8451;'"></td>
+                            <td th:text="${weather.nightTemperature}+ '&#8451;'"></td>
+                        </tr>
+                        <tr>
+                            <td>feel like</td>
+                            <td th:text="${weather.morningFeelLikeTemperature} + '&#8451;'"></td>
+                            <td th:text="${weather.afternoonFeelLikeTemperature} +'&#8451;'"></td>
+                            <td th:text="${weather.eveningFeelLikeTemperature} + '&#8451;'"></td>
+                            <td th:text="${weather.nightFeelLikeTemperature}+ '&#8451;'"></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+            <script>
+                var coll = document.getElementsByClassName("collapsible");
+                var i;
+
+                for (i = 0; i < coll.length; i++) {
+                    coll[i].addEventListener("click", function() {
+                        this.classList.toggle("active");
+                        var content = this.nextElementSibling;
+                        if (content.style.display === "block") {
+                            content.style.display = "none";
+                        }
+                        else {
+                            content.style.display = "block";
+                        }
+                    });
+                }
+            </script>
+        </div>
+    </div>
+</div>>
+
+</body>
 </html>
