--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/index.css">
+    <nav th:replace = "NavBar :: DarkNavBar"></nav>
 </head>
 <body>
 <div class="container">
@@ -39,7 +40,7 @@
         <div class="col">
             <div th:each="weather : ${dailyWeathers}">
                 <button type="button" class="collapsible">
-                    <span style="text-align: left">test</span>
+                    <span th:text="${weather.dayOfTheWeek} +', ' + ${weather.date}"></span>
                     &emsp;&emsp;&emsp;&emsp;
                     <div style="display:inline-block;">
                         <img th:src="${weather.weatherConditionIconURL}" alt="weather icon">
@@ -50,29 +51,29 @@
                 </button>
 
                 <div class="content">
-                    <p th:text="'&emsp;the high will be ' + ${weather.dailyMax} + '&#8451;, the low will be ' + ${weather.dailyMax} + '&#8451; ' + ${weather.summary}"></p>
-                    <p th:text="'&emsp;sunrise: ' + ${weather.sunRise} +'&emsp;sunset:' + ${weather.sunSet} +'&emsp;wind: ' + ${weather.windSpeed} +'km/h'"></p>
+                    <p th:text="'&emsp;the high will be ' + ${weather.dailyMax} + '&#8451;, the low will be ' + ${weather.dailyMax} + '&#8451;. ' + ${weather.summary}"></p>
+                    <p th:text="'&emsp;sunrise: ' + ${weather.sunRise} +'&emsp;sunset:' + ${weather.sunSet} +'&emsp;wind: ' + ${weather.windSpeed} +'km/h&emsp;probability of percipitation: ' + ${weather.precipitationProbability}"></p>
                     <p th:text="'&emsp;humidity: ' + ${weather.humidity} + '%&emsp;cloudiness: ' + ${weather.cloud} +'%&emsp;uv index: ' + ${weather.uv}"></p>
                     <br>
                     <table>
                         <tr>
                             <td></td>
                             <td>Morning</td>
-                            <td>afternoon</td>
+                            <td>day</td>
                             <td>evening</td>
                             <td>night</td>
                         </tr>
                         <tr>
                             <td>temperature</td>
                             <td th:text="${weather.morningTemperature} + '&#8451;'"></td>
-                            <td th:text="${weather.afternoonTemperature} + '&#8451;'"></td>
+                            <td th:text="${weather.dayFeelLikeTemperature} + '&#8451;'"></td>
                             <td th:text="${weather.eveningTemperature} + '&#8451;'"></td>
                             <td th:text="${weather.nightTemperature}+ '&#8451;'"></td>
                         </tr>
                         <tr>
                             <td>feel like</td>
                             <td th:text="${weather.morningFeelLikeTemperature} + '&#8451;'"></td>
-                            <td th:text="${weather.afternoonFeelLikeTemperature} +'&#8451;'"></td>
+                            <td th:text="${weather.dayFeelLikeTemperature} +'&#8451;'"></td>
                             <td th:text="${weather.eveningFeelLikeTemperature} + '&#8451;'"></td>
                             <td th:text="${weather.nightFeelLikeTemperature}+ '&#8451;'"></td>
                         </tr>
