--- a/src/main/resources/templates/NavBar.html
+++ b/src/main/resources/templates/NavBar.html
@@ -1,26 +1,25 @@
-<!-- White with black text -->
-<nav th:fragment = "DarkNavBar" class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav th:fragment="DarkNavBar" class="navbar navbar-expand-sm bg-dark navbar-dark">
     <link rel="stylesheet" href="/Navbar.css">
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" th:href="@{/}">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/hour}">48 hour weather forecast</a>
+            <a class="nav-link" th:ref="@{/historical}">historical weather data</a>
         </li>
-        <li>
-            <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">1</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                    <label class="form-check-label" for="inlineCheckbox2">2</label>
-                </div>
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </li>
-  </ul>
+    </ul>
+
+    <form name="myForm" id="myForm" onsubmit="changeToDetailedHourlyForecast()">
+        <input type="hidden" name="forecastOption" id="forecastOption" value="0" />
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" formaction="\">Search</button>
+    </form>
+
+    <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" name="city" placeholder="enter a city" aria-label="Search">
+        <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" id="mySwitch" name="darkmode" value="yes" checked>
+            <label class="form-check-label" for="mySwitch">Dark Mode</label>
+        </div>
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" formaction="\">Search</button>
+    </form>
 </nav>
